[tool.poetry]
name = "clevercloud"
version = "0.1.0"
description = "A package for creating clever word clouds"
authors = ["Group_20"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
