[tool.poetry]
name = "clevercloud"
version = "0.1.0"
description = "A package for creating clever word clouds"
authors = ["Group_20"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
nltk = "^3.6.7"
wordcloud = "^1.8.1"
stem = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
